<resources>
    <string name="app_name">My Wallet</string>

    <!-- Strings related to login -->
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_email">Email Id</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_amount_entered">Amount should be less than the balance amount</string>
    <string name="error_initial_amount_entered">Amount should be more than the expenditure amount tracked already.</string>
    <string name="signup_guide">Please enter your details and Sign up.</string>
    <string name="toast_login_success">Login successful.</string>
    <string name="toast_login_failed">Login failed, please use correct credentials.</string>
    <string name="toast_signup_success">Successfully signed up</string>
    <string name="toast_signup_failed">Signed up failed, the email already exists. /n Please Sign up with a different email.</string>


    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_content">My\nWallet</string>

    <string name="setting_help">Please enter the initial amount for different categories.</string>
    <string name="reset_text">Note: Save will update the amount and Reset will reset everything including the expenditure already tracked if any.</string>
    <string name="title_activity_setting">SettingActivity</string>
</resources>
